# EROS

./: AMENDMENTS.md  App.tsx  BUILD_STATUS.md  EROS_v3_2_Canonical_Architecture.md  KnowledgeGraph.tsx  Makefile  PACKAGING.md  README.md  app.py  apply_schema.py  artifact_store.py  attest_models.py  attestation.py  budget.py  build_modelfiles.py  client.ts  config.py  connectors.py  connectors.yaml  dev.ps1  dev.sh  docker-compose.yml  download  env.example  errors.py  events.py  graph.py  heuristic.py  hybrid.py  index-CyM4TtBn.js  index-DiuQ8CT6.css  index.html  kernel.py  manifest.json  mcp_server.py  nodes.py  package-lock.json  package.json  pool.py  processing.py  (+16 more)
